--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <h1 id="mainHead">Welcome to Chat world</h1>
 	<input type="text" class="nickname" placeholder="What is your nickname?">
 	<ul id="messages"></ul>
 	<form>
