--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 	<ul id="messages"></ul>
 	<form>
 		<input class="message" type="text" id="m" autocomplete="off">
-		<button>send</button>
+		<button>SEND IT</button>
 	</form>
     </div>
 
